--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "dinov2"]
 	path = dinov2
 	url = git@github.com:dswwilliams/dinov2.git
+[submodule "ue_testing"]
+	path = ue_testing
+	url = https://github.com/dswwilliams/ue_testing.git
