--- a/environment.yml
+++ b/environment.yml
@@ -1,4 +1,4 @@
-name: gammassl
+name: dinov2_lite
 channels:
   - defaults
 dependencies:
@@ -25,12 +25,14 @@ dependencies:
       - contourpy==1.2.0
       - cycler==0.12.1
       - docker-pycreds==0.4.0
+      - efficientnet-pytorch==0.7.1
       - filelock==3.13.1
       - fonttools==4.49.0
       - fsspec==2024.2.0
       - fvcore==0.1.5.post20221221
       - gitdb==4.0.11
       - gitpython==3.1.42
+      - huggingface-hub==0.21.3
       - idna==3.6
       - importlib-resources==6.1.2
       - iopath==0.1.10
@@ -40,19 +42,23 @@ dependencies:
       - markupsafe==2.1.5
       - matplotlib==3.8.3
       - mpmath==1.3.0
+      - munch==4.0.0
       - networkx==3.2.1
       - numpy==1.26.4
       - opencv-python==4.9.0.80
       - packaging==23.2
       - pillow==10.2.0
       - portalocker==2.8.2
+      - pretrainedmodels==0.7.4
       - protobuf==4.25.3
       - psutil==5.9.8
       - pyparsing==3.1.1
       - python-dateutil==2.8.2
       - pyyaml==6.0.1
       - requests==2.31.0
+      - safetensors==0.4.2
       - scipy==1.12.0
+      - segmentation-models-pytorch==0.3.3
       - sentry-sdk==1.40.6
       - setproctitle==1.3.3
       - six==1.16.0
@@ -60,6 +66,7 @@ dependencies:
       - sympy==1.12
       - tabulate==0.9.0
       - termcolor==2.4.0
+      - timm==0.9.2
       - torch==2.2.1
       - torchvision==0.17.1
       - tqdm==4.66.2
@@ -68,3 +75,4 @@ dependencies:
       - wandb==0.16.3
       - yacs==0.1.8
       - zipp==3.17.0
+prefix: /Users/dw/miniconda3/envs/dinov2_lite
