--- a/environment.yml
+++ b/environment.yml
@@ -39,6 +39,7 @@ dependencies:
       - jinja2==3.1.3
       - kiwisolver==1.4.5
       - kornia==0.7.1
+      - loralib==0.1.2
       - markupsafe==2.1.5
       - matplotlib==3.8.3
       - mpmath==1.3.0
