--- a/environment.yml
+++ b/environment.yml
@@ -49,6 +49,7 @@ dependencies:
       - opencv-python==4.9.0.80
       - packaging==23.2
       - pillow==10.2.0
+      - plotly==5.19.0
       - portalocker==2.8.2
       - pretrainedmodels==0.7.4
       - protobuf==4.25.3
@@ -66,6 +67,7 @@ dependencies:
       - smmap==5.0.1
       - sympy==1.12
       - tabulate==0.9.0
+      - tenacity==8.2.3
       - termcolor==2.4.0
       - timm==0.9.2
       - torch==2.2.1
